<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="156dp"
        android:layout_height="60dp"
        android:layout_marginTop="68dp"
        android:background="@color/background"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textColor="@color/app_name_color"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/string_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:layout_weight="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rotationX="0">

            <Button
                android:id="@+id/button_all_delete"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="5sp"
                android:layout_weight="0"
                android:text="@string/button_all_delete"
                android:textSize="13sp" />

            <Button
                android:id="@+id/button_square"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5sp"
                android:layout_weight="0"
                android:text="@string/button_square"
                android:textSize="13sp" />

            <Button
                android:id="@+id/button_percent"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5sp"
                android:layout_weight="0"
                android:text="@string/button_persent"
                android:textSize="13sp" />

            <Button
                android:id="@+id/button_delete"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="65dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10sp"
                android:backgroundTint="@color/button"
                android:text="@string/button_delete" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_9"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="5sp"
                android:text="@string/button_9" />

            <Button
                android:id="@+id/button_8"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5sp"
                android:text="@string/button_8" />

            <Button
                android:id="@+id/button_7"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5sp"
                android:text="@string/button_7" />

            <Button
                android:id="@+id/button_devide"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:layout_weight="0"
                android:text="@string/button_devide" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_6"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="5sp"
                android:text="@string/button_6" />

            <Button
                android:id="@+id/button_5"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5sp"
                android:text="@string/button_5" />

            <Button
                android:id="@+id/button_4"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5sp"
                android:text="@string/button_4" />

            <Button
                android:id="@+id/button_multiply"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:layout_weight="0"
                android:text="@string/button_multilpy" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_3"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="5sp"
                android:text="@string/button_3" />

            <Button
                android:id="@+id/button_2"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5sp"
                android:text="@string/button_2" />

            <Button
                android:id="@+id/button_1"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5sp"
                android:text="@string/button_1" />

            <Button
                android:id="@+id/button_minus"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:layout_weight="0"
                android:text="@string/button_minus" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_dot"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="5sp"
                android:text="@string/button_dot" />

            <Button
                android:id="@+id/button_0"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5sp"
                android:text="@string/button_0" />

            <Button
                android:id="@+id/button_result"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="65dp"
                android:layout_height="50dp"
                android:layout_marginEnd="5sp"
                android:backgroundTint="@color/button"
                android:text="@string/button_count" />

            <Button
                android:id="@+id/button_plus"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:layout_weight="0"
                android:text="@string/button_plus" />

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>